@@ -5,5 +5,8 @@
   "author": "Feoras",
   "description": "Greatly extend the end game requiring multiple launches, massively increased science and item production. Requires a few hundred launches with a variety of new components. The goal is to build a vessel capable of getting you off the planet and home safely.",
   "factorio_version": "1.1",
-  "dependencies": ["base", "? Milestones", "? boblibrary", "? bobplates", "? bobmodules", "? bobelectronics", "? boblogistics", "? bobtech", "? bobequipment", "! SpaceMod", "! space-exploration"]
+  "dependencies": ["base", "? Milestones", 
+    "? boblibrary", "? bobplates", "? bobmodules", "? bobelectronics", "? boblogistics", "? bobtech", "? bobequipment",
+    "? pyalienlife", "? pyalternativeenergy", "? pycoalprocessing", "? pyfusionenergy", "? pyhightech", "? pyindustry", "? pypetroleumhandling", "? pyrawores", "? pypostprocessing",
+    "! SpaceMod", "! space-exploration"]
 }
