@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.1
 Date: .2023
+  Features:
+    - Added pyanodons integration
   Changes:
     - Adapted bob technology FTL D research cost to new curve
 ---------------------------------------------------------------------------------------------------
